# bmi270

./: Cargo.toml
example/nrf52840/: Cargo.toml
example/nrf52840/src/: main.rs
example/nrf5340/: Cargo.toml
example/nrf5340/.cargo/: config.toml
example/nrf5340/src/: main.rs
src/: config.rs  lib.rs
src/hl/: mod.rs
src/ll/: i2c.rs  ll.yaml  mod.rs  spi.rs  test.rs
src/ll/test/: mod.rs  spi.rs
