[package]
edition = "2021"
name = "bmi270-test"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[dependencies]
bmi270 = { path = "../..", features = ["defmt-03"] }

embassy-futures = { git = "https://github.com/embassy-rs/embassy.git", rev = "9ff8c70009233d4ea05208e3aa649c5b15512cab" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy.git", rev = "9ff8c70009233d4ea05208e3aa649c5b15512cab", features = ["defmt"] }
embassy-executor = { git = "https://github.com/embassy-rs/embassy.git", rev = "9ff8c70009233d4ea05208e3aa649c5b15512cab", features = ["task-arena-size-32768", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
embassy-time = { git = "https://github.com/embassy-rs/embassy.git", rev = "9ff8c70009233d4ea05208e3aa649c5b15512cab", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-nrf = { git = "https://github.com/embassy-rs/embassy.git", rev = "9ff8c70009233d4ea05208e3aa649c5b15512cab", features = ["defmt", "nrf5340-app-s", "time-driver-rtc1", "gpiote", "unstable-pac", "time"] }

defmt = "0.3"
defmt-rtt = "0.4"

fixed = "1.10.0"
static_cell = { version = "2" }
cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }
embedded-hal = { version = "1.0" }
embedded-hal-async = { version = "1.0" }

[profile.release]
debug = 2